# capl-ls

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  lsp.rs  main.rs  model.rs  parser.rs  preprocessor.rs
tests/: parser.rs
tests/fixtures/: basic.can
