[package]
name = "capl-ls"
version = "0.1.0"
edition = "2021"
publish = false
description = "Experimental CAPL language server"

[dependencies]
anyhow = "1"
dashmap = "6"
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
insta = "1"

